--- a/index.html
+++ b/index.html
@@ -11,6 +11,175 @@
     <title>12 Bool nome</title>
 </head>
 <body>
+    <!-- col 12 -->
+    <div class="container">
+        <div class="col-12">
+            <h1>12 Bool Framework</h1>
+        </div>
+    </div>
+
+    <!-- col 6-6  -->
+    <div class="container">
+        <div class="col-6">
+            <div class="box">
+                Col 6
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="box">
+                Col 6
+            </div>
+        </div>
+    </div>
+
+    <!-- col 4-4-4 -->
+    <div class="container">
+        <div class="col-4">
+            <div class="box">
+                col 4
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="box">
+                col 4
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="box">
+                col 4
+            </div>
+        </div>
+    </div>
+
+    <!-- col 2-8-2 -->
+    <div class="container">
+        <div class="col-2">
+            <div class="box">
+                Col 2
+            </div>
+        </div>
+        <div class="col-8">
+            <div class="box">
+                Col 8
+            </div>
+        </div>
+        <div class="col-2">
+            <div class="box">
+                Col 2
+            </div>
+        </div>
+    </div>
+
+    <!-- col off2-8 -->
+    <div class="container">
+        <div class="col-8 offset-2">
+            <div class="box">
+                Col 8
+            </div>
+        </div>
+    </div>
+
+    <!-- col 3-4-off3-2 -->
+    <div class="container">
+        <div class="col-3">
+            <div class="box">
+                Col 3
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="box">
+                Col 4
+            </div>
+        </div>
+        <div class="col-2 offset-3">
+            <div class="box">
+                Col 2
+            </div>
+        </div>
+    </div>
+
+    <!-- col off2-2-off2-2-off2-2 -->
+    <div class="container">
+        <div class="col-2 offset-2">
+            <div class="box">
+                Col 2
+            </div>
+        </div>
+        <div class="col-2 offset-2">
+            <div class="box">
+                Col 2
+            </div>
+        </div>
+        <div class="col-2 offset-2">
+            <div class="box">
+                Col 2
+            </div>
+        </div>
+    </div>
+
+    <!-- col 1 -->
+    <div class="container">
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="box">
+                Col 1
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
