--- a/index.html
+++ b/index.html
@@ -181,5 +181,157 @@
         </div>
     </div>
     
+    <!-- NESTED COL -->
+    <div class="container">
+        <div class="col-12">
+            <h2>NESTED</h2>
+        </div>
+    </div>
+
+    <!-- 1 -->
+    <div class="container">
+        <div class="col-6 padding-0">
+            <div class="col-4">
+                <div class="box">Col 4</div>
+            </div>
+            <div class="col-4">
+                <div class="box">Col 4</div>
+            </div>
+            <div class="col-4">
+                <div class="box">Col 4</div>
+            </div>
+        </div>
+        <div class="col-6 padding-0">
+            <div class="col-6">
+                <div class="box">
+                    Col 6
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="box">
+                    Col 6
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 2 -->
+    <div class="container">
+        <div class="col-4 padding-0">
+            <div class="col-4">
+                <div class="box">
+                    Col 4
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="box">
+                    Col 4
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="box">
+                    Col 4
+                </div>
+            </div>
+        </div>
+        <div class="col-4 padding-0">
+            <div class="col-3">
+                <div class="box">
+                    Col 3
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="box">
+                    Col 3
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="box">
+                    Col 3
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="box">
+                    Col 3
+                </div>
+            </div>
+        </div>
+        <div class="col-4 padding-0">
+            <div class="col-2">
+                <div class="box">
+                    2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                    2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                    2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                    2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                    2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                    2
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 3 -->
+    <div class="container">
+        <div class="col-6 padding-0">
+            <div class="col-5">
+                <div class="box">
+                    Col 5
+                </div>
+            </div>
+            <div class="col-5">
+                <div class="box">
+                    Col 5
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                    2 
+                </div>
+            </div>
+        </div>
+        <div class="col-6 padding-0">
+            <div class="col-2">
+                <div class="box">
+                    2
+                </div>
+            </div>
+            <div class="col-3 offset-2">
+                <div class="box">
+                    3
+                </div>
+            </div>
+            <div class="col-2 offset-1">
+                <div class="box">
+                    2
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                    2
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
