Logo Assetto Corsa Competizione - with love for Paolo

--- a/pixel-art.html
+++ b/pixel-art.html
@@ -11,7 +11,7 @@
     <title>ACC pixel art</title>
 </head>
 <body>
-    <!-- Logo -->
+    <!-- Logo ACC-->
     <div class="container">
         <div class="ACClogo">
             <!-- prima riga -->
